# cascade-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  modal_app.py  pyproject.toml
app/: db.py  main.py  stream_registry.py
app/api/routes/: graph.py  literature.py  sessions.py  stream.py  whatif.py
app/clients/: gmi_client.py  hydra_client.py  literature_client.py  research_client.py
app/core/: config.py  exceptions.py  logging.py
app/models/: api.py  domain.py  events.py
app/repositories/: evidence_repo.py  graph_repo.py  session_repo.py
app/services/: cache_service.py  graph_service.py  hypothesis_service.py  literature_service.py  memory_service.py  orchestrator.py  research_service.py
docs/: backend_design.md  cascade_slides.html
scripts/: deploy_modal.ps1
tests/: test_literature_client.py  test_literature_routes.py
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.jsx  index.css
web/src/api/: client.js
web/src/components/: CascadeLogo.jsx  ChatView.jsx  GraphCanvas.jsx  InfoPanel.jsx  PromptInput.jsx  WhatIfPanel.jsx
web/src/data/: mockData.js
